@@ -164,6 +164,45 @@ class TestWebengineScripts:
 
         assert scripts_helper.get_script().injectionPoint() == expected
 
+    @pytest.mark.parametrize('header1, header2, expected_names', [
+        (
+            ["// @namespace ns1", "// @name same"],
+            ["// @namespace ns2", "// @name same"],
+            ['GM-ns1/same', 'GM-ns2/same'],
+        ),
+        (
+            ["// @name same"],
+            ["// @name same"],
+            ['GM-same', 'GM-same-2'],
+        ),
+        (
+            ["// @name same"],
+            ["// @name sam"],
+            ['GM-same', 'GM-sam'],
+        ),
+    ])
+    def test_greasemonkey_duplicate_name(self, scripts_helper,
+                                         header1, header2, expected_names):
+        template = """
+            // ==UserScript==
+            {header}
+            // ==/UserScript==
+        """
+        template = textwrap.dedent(template.lstrip('\n'))
+
+        source1 = template.format(header="\n".join(header1))
+        script1 = greasemonkey.GreasemonkeyScript.parse(source1)
+        source2 = template.format(header="\n".join(header2))
+        script2 = greasemonkey.GreasemonkeyScript.parse(source2)
+        scripts_helper.inject([script1, script2])
+
+        names = [script.name() for script in scripts_helper.get_scripts()]
+        assert names == expected_names
+
+        source3 = textwrap.dedent(template.lstrip('\n')).format(header="// @name other")
+        script3 = greasemonkey.GreasemonkeyScript.parse(source3)
+        scripts_helper.inject([script3])
+
 
 def test_notification_permission_workaround():
     """Make sure the value for QWebEnginePage::Notifications is correct."""
